# FYPDiss

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: activations.py  analyse.py  analysis.py  config.py  dataset.py  interp.py  losses.py  main.ipy  main.py  model.py  node.py  plot_jacobians.py  plot_trajectory.py  quat.py  train.py  trajectory.py
