[project]
name = "fypdiss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.7.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
]
